--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-         version="4.0">
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         version="3.1"
+         metadata-complete="false">
+    <env-entry>
+        <env-entry-name>auth0.domain</env-entry-name>
+        <env-entry-type>java.lang.String</env-entry-type>
+        <env-entry-value>dev-nqscvujh.auth0.com</env-entry-value>
+    </env-entry>
+    <env-entry>
+        <env-entry-name>auth0.clientId</env-entry-name>
+        <env-entry-type>java.lang.String</env-entry-type>
+        <env-entry-value>IfMROuflQmMrGQDnGZkUfAVxPOQwZmOv</env-entry-value>
+    </env-entry>
+    <env-entry>
+        <env-entry-name>auth0.clientSecret</env-entry-name>
+        <env-entry-type>java.lang.String</env-entry-type>
+        <env-entry-value>iMlPRVDkIfzXqTyoE-aGrldCjoTi99mGvVjJfZ0QGoY6wOKhliVJ13_nOrEa4-x7</env-entry-value>
+    </env-entry>
+    <env-entry>
+        <env-entry-name>auth0.scope</env-entry-name>
+        <env-entry-type>java.lang.String</env-entry-type>
+        <env-entry-value>openid profile email</env-entry-value>
+    </env-entry>
+
+<!--    <listener>-->
+<!--        <listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>-->
+<!--    </listener>-->
+
 </web-app>
