Additional configs for Auth0

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
             <version>3.0.1</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>14.0</version>
+        </dependency>
     </dependencies>
 
     <build>
