--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,11 @@
             <artifactId>javax.security.enterprise</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.4.7.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
