--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,5 +24,10 @@
         <env-entry-type>java.lang.String</env-entry-type>
         <env-entry-value>openid profile email</env-entry-value>
     </env-entry>
-
+    <resource-ref>
+        <description>DB Connection</description>
+        <res-ref-name>jdbc/railwayStat</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
 </web-app>
