--- a/src/main/webapp/WEB-INF/log4j.properties
+++ b/src/main/webapp/WEB-INF/log4j.properties
@@ -1,15 +1,29 @@
-# Define the root logger with file appender
-log4j.rootLogger = DEBUG, DB
+## Define the root logger with file appender
+#log4j.rootLogger = DEBUG, DB
+#
+## Define the file appender
+#log4j.appender.DB=org.apache.log4j.jdbc.JDBCAppender
+#log4j.appender.DB.URL=jdbc:mysql://35.188.31.126/railwaysdb
+## Set Database Driver
+#log4j.appender.DB.driver=org.hsqldb.jdbc.JDBCDriver
+## Set database user name and password
+#log4j.appender.DB.user=root
+#log4j.appender.DB.password=seProject2019!
+## Set the SQL statement to be executed.
+#log4j.appender.DB.layout.ConversionPattern=INSERT INTO `logs` VALUES ('%t', now() ,'%C','%L','%p','%m', '%throwable{200}')
+## Define the layout for SQL appender
+#log4j.appender.DB.layout=org.apache.log4j.EnhancedPatternLayout
+# Root Location Option !!
+log4j.rootCategory=info,console
 
-# Define the file appender
-log4j.appender.DB=org.apache.log4j.jdbc.JDBCAppender
-log4j.appender.DB.URL=jdbc:hsqldb:mem:exampleDatabase
-# Set Database Driver
-log4j.appender.DB.driver=org.hsqldb.jdbc.JDBCDriver
-# Set database user name and password
-log4j.appender.DB.user=root
-log4j.appender.DB.password=password
-# Set the SQL statement to be executed.
-log4j.appender.DB.layout.ConversionPattern=INSERT INTO APP_LOGS VALUES ('%t', now() ,'%C','%L','%p','%m', '%throwable{200}')
-# Define the layout for SQL appender
-log4j.appender.DB.layout=org.apache.log4j.EnhancedPatternLayout
+# Package Based Logging
+log4j.logger.com.jcg.log4j.console.appender=console
+log4j.additivity.com.jcg.log4j.console.appender=false
+
+# Redirect Log Messages To Console !!
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.target=System.out
+log4j.appender.console.immediateFlush=true
+log4j.appender.console.encoding=UTF-8
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.conversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
