--- a/src/main/webapp/WEB-INF/log4j.properties
+++ b/src/main/webapp/WEB-INF/log4j.properties
@@ -5,12 +5,12 @@ log4j.rootLogger = INFO, DB
 log4j.appender.DB=org.apache.log4j.jdbc.JDBCAppender
 log4j.appender.DB.URL=jdbc:mysql://35.188.31.126/railwaysdb
 # Set Database Driver
-log4j.appender.DB.driver=org.hsqldb.jdbc.JDBCDriver
+log4j.appender.DB.driver=com.mysql.cj.jdbc.Driver
 # Set database user name and password
 log4j.appender.DB.user=root
 log4j.appender.DB.password=seProject2019!
 # Set the SQL statement to be executed.
-log4j.appender.DB.layout.ConversionPattern=INSERT INTO `railwaysdb`.`api_logs` (`user_id`, `datestamp`, `method`) VALUES ('%x', now(), %m);
+log4j.appender.DB.layout.ConversionPattern=INSERT INTO `api_logs` (user_id) VALUES ('%m');
 # Define the layout for SQL appender
 log4j.appender.DB.layout=org.apache.log4j.EnhancedPatternLayout
 # Root Location Option !!
